# Grupa_6

./: .gitignore  README.md
TeamProject/client/: README.md
TeamProject/client/sources/: main.cpp
TeamProject/server/: CMakeLists.txt  README.md
TeamProject/server/sources/: main.cpp
client/: CMakeLists.txt
client/sources/: client.cpp  main.cpp
server/: CMakeLists.txt  users.txt
server/sources/: main.cpp  server.cpp
